--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -6,6 +6,7 @@
     --black-14: #00000024;
     --white: #FFFFFF;
     --white-40: #FFFFFF66;
+    --white-80: #FFFFFFCC;
     --yellow: #FFC453;
     --green: #29E489;
 }
@@ -169,5 +170,39 @@ section {
     line-height: 22px;
     color: var(--white);
 }
-
+.quote .top {
+    margin-bottom: 29px;
+}
+.quote .top h2 {
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: left;
+    color: var(--white);
+}
+.quote .top span {
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: left;
+    color: var(--white-40);
+}
+.quote .bottom span {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: left;
+    color: var(--white-80);
+}
+.quote .bottom .author {
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: right;
+    color: var(--white-40);
+}
 
