--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -9,6 +9,7 @@
     --white-80: #FFFFFFCC;
     --yellow: #FFC453;
     --green: #29E489;
+    --gray: #242424;
 }
 * {
     box-sizing: border-box;
@@ -115,6 +116,9 @@ section {
     justify-content: left;
     gap: 6px;
 }
+.email li:last-of-type {
+    border: none;
+}
 .email .description {
     margin-top: 6px;
 }
@@ -206,10 +210,64 @@ section {
     color: var(--white-40);
 }
 @media screen and (max-width: 1279px) {
+    .left-desktop,
+    .right-desktop,
+    .bottom-desktop {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;  
+    }
+    .news {
+        display: none;
+    }
+}
+@media screen and (min-width: 1280px) {
     .container {
+        width: 1280px;
+        margin: 0 auto;
+        display: flex;
+        gap: 16px;  
+    }
+    .left-desktop,
+    .right-desktop {
         display: flex;
         flex-direction: column;
         gap: 16px;
+    }
+    .bottom-desktop {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 16px;
+    }
+    .bottom-desktop .quote {
+        width: 450px;
+        flex-shrink: 0;
+        max-height: 189px;
+    }
+    .news .header {
+        margin-bottom: 16px;
+    }
+    .news .header ul {
+        display: flex;
+        gap: 10px;
+    }
+    .news .header ul li {
+        padding: 8px 16px;
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 22px;
+        text-align: left;
+        color: var(--gray);
+    }
+    .news .header ul li:first-of-type {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 22px;
+        text-align: left;
+        color: var(--white);
+        background-color: var(--gray);
     }
 }
 
